Correct title overflow on article items

--- a/src/component/item/Job.css
+++ b/src/component/item/Job.css
@@ -49,6 +49,7 @@
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
+    overflow: hidden;
     color: var(--text-neutral-50);
     font-weight: 700;
     font-size: 18px;
